k8s/v1.1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-catalogue-v1-1
  labels:
    app: product-catalogue
    version: v1.1
