k8s/v1.1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-svc
  namespace: product-catalogue-v1-1
  labels:
    app: product-catalogue
    version: v1.1
spec:
  selector:
    app: product-catalogue
    version: v1.1
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
